--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ div, input, span, select, img, a, button, tr, td, button, textarea {position: re
 .SVGD {background-repeat: no-repeat; background-size: contain; background-position: center;
 
 }
-body .icon {display: flex; justify-content: center; align-items: center; cursor: pointer; transition: 0.2s; width: fit-content; padding: 0.5em;}
+body .icon {display: flex; justify-content: center; align-items: center; cursor: pointer; transition: 0.2s; width: fit-content; padding: 0.5em; user-select: none;}
     .iconDiv {display: flex; flex-direction: column; justify-content: center; align-items: center;}
         .iconDiv > div {width: 100%; text-align: center; font-size: 0.8em;}
     .iconButtonDiv {display: flex; flex-direction: column; margin: 0 0.25em; align-items: center; justify-content: center;}
@@ -82,16 +82,19 @@ display: flex; align-items: end;
 }
 
 .dropdownContainer {display: flex; flex-direction: column; margin-bottom: 1em; height: 3rem; border: 2px solid black;}
-.dropdown {width: 100%; height: 100%;  background-color: white;  border-radius: 0.1em 0.1em 0 0;}
+.dropdown {width: 100%; height: 100%;  border-radius: 0.1em 0.1em 0 0;}
     .dpTop {width: 100%; height: 100%; display: flex;}
+        .dpTop > div:after {content: ""; width: 100%; height: 100%; background-color: rgba(0,0,0,0); position: absolute; top: 0; left: 0; cursor: pointer;} /* stupid way to avoid onclick */
+
         .dpTop input {width: 100%; height: 100%; padding: 0.2em 0.5em; }
         .dpTop div {width: 100%; height: 100%; padding: 0.2em 0.5em;}
+            .dpTop:has(input) div {width: fit-content; border: 1px solid black; border-radius: 0.2em; margin: 0.1em 0.25em;}
             .dpTop .dpOption:hover {background-color: inherit;}
         .dpTop .arrow {height: 100%; display: flex; align-items: center; justify-content: center;}
         .dropdown:hover .dpBot {max-height: 6em; overflow-y: auto; border-color: black; background-color: white;}
     .dpBot {width: calc(100% + 3px); max-height: 0; position: absolute; top: calc(100% + 2px); left: -1.5px; border: 2px solid black; border-radius: 0 0 0.1em 0.1em; border-color: rgba(0,0,0,0); border-top: none; overflow: hidden; z-index: 2;}
         .dpBot:empty {border: none;}
-        .dpOption {width: 100%; background-color: white; padding: 0.2em 0.5em; display: flex; align-items: center; user-select: none;}
+        .dpOption {width: 100%; padding: 0.2em 0.5em; display: flex; align-items: center; user-select: none;}
             .dpOption:hover {cursor: pointer; background-color: grey;}
         .dpInputOption {width: fit-content !important; border: 1px solid black; border-radius: 0.2em; margin-right: 0.2em;}
     .dropdownContainer > span {position: absolute; top: 94%; margin-left: 0.75em; margin-top: -0.15em; font-size: 0.8em;}
@@ -119,19 +122,34 @@ display: flex; align-items: end;
 
     .inputContainer > span {position: absolute; top: 96%; margin-left: 0.75em; margin-top: -0.15em; font-size: 0.8em;}
 
-.tableDiv {overflow: auto; width: 100%; height: 100%;}
+.tableDiv {overflow: auto; width: 100%; height: 100%; display: flex;}
 .table {display: flex; flex-direction: column; border: 2px solid black; width: 100%; height: 100%;}
     .table .row {display: flex; height: 100%;}
-    .table .cell {display: flex; /*flex: 1 0 auto;*/ height: 100%; align-items: center; justify-content: center; text-align: center; border: 1px solid black; width: 100%;}
-    #tableBar {background-color: black; color: white; display: flex; align-items: center; justify-content: center; cursor: pointer;}
+    .table .cell {display: flex; /*flex: 1 0 auto;*/ height: 100%; align-items: center; justify-content: center; text-align: center; border: 1px solid black; width: 100%; padding: 0;}
+        .table .cell#slctCell {background-color: yellow;}
+        .tablePlus {background-color: black; color: white; display: flex; align-items: center; justify-content: center; cursor: pointer;}
+    #ctPopup {width: 300px; height: 200px; background-color: white; border: 2px solid black; border-radius: 0.25em; display: flex; flex-direction: column;  position: absolute; transition: 0s;
+        overflow-y: auto;
+        left: 0px; top: 0px; /* margin: 0.5em; */
+        box-shadow: 1px 2px 4px rgba(0,0,0,0.7);
+    }
+        #ctPopup > div:first-child:hover {cursor: grab;}
+            #ctPopup > div:first-child:active {cursor: grabbing;}
+        #ctPopup > div:last-child {overflow: auto;}
+        #ctPopup div {transition: 0s;}
+        #ctPopup button {transition: 0s;}
 
 #mcPrepTable {width: 100%; height: 100%; background-color: green; display: flex; flex-direction: column;}
     #mcPrepTable .row {width: 100%; height: 100%; background-color: white; border-bottom: 4px solid black; display: flex;}
         #mcPrepTable .row:last-child {border-bottom: none;}
-        #mcPrepTable .cell {width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; cursor: pointer; border-right: 4px solid black;}
+        #mcPrepTable .cell {width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; cursor: pointer; border-right: 4px solid black; user-select: none;}
             #mcPrepTable .cell:last-child {border-right: none;}
         #mcPrepTable .cell#selectedCell {background-color: rgba(var(--c1));}
         #mcPrepTable .icon {position: absolute; right: 0; bottom: 0; margin: 0.2em; font-size: 0.8em;}
+    #mcptPopup {background-color: white; border: 2px solid black; box-shadow: 1px 2px 3px rgba(0,0,0,0.8); transition: 0s;
+        /* position: absolute; top: 0; left: 0; */
+    }
+        #mcptPopup div {transition: 0s;}
 
 .opDiv {width: calc(100% - 0.4em); border: 1px solid black; display: flex; margin: 0.2em;}
     .opdOp {cursor: pointer; width: 100%; display: flex; align-items: center; justify-content: center; user-select: none;}
@@ -179,8 +197,8 @@ display: flex; align-items: end;
 
 
 #mcTableOptionsDiv {width: 100%; margin: 1em 0; border: 2px solid black; height: 100%; display: flex; background-color: white;}
-    #mcTOPrev {width: 70%; height: 100%; border-right: 3px solid black;}
-    #mcTOODiv {width: 30%; height: 100%; overflow-y: auto; overflow-x: hidden;}
+    #mcTOPrev {width: 100%; height: 100%; border-right: 3px solid black;}
+    /*#mcTOODiv {width: 30%; height: 100%; overflow-y: auto; overflow-x: hidden;}*/
 
 #mccbPopup {width: 80%; height: 70%; background-color: white; display: flex; flex-direction: column;}
     #mccbpPrev {width: 100%; height: 100%; border-bottom: 2px solid black; margin-bottom: 0.2em; padding: 1em;}
