--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ body .icon {display: flex; justify-content: center; align-items: center; cursor:
 
     .coolButton.flat:active {transform: scale(1.1);}
         .coolButton.flat {background-color: transparent;}
+.coolButtonText {font-size: 0.9em;}
 
 
 .dragOver {background-color: rgba(var(--c2)) !important;}
@@ -100,7 +101,7 @@ display: flex; align-items: end;
     .dropdownContainer > span {position: absolute; top: 94%; margin-left: 0.75em; margin-top: -0.15em; font-size: 0.8em;}
 
 
-.inputContainer {display: flex; flex-direction: column; margin-bottom: 1em;}
+.inputContainer {display: flex; flex-direction: column;}
     .input {width: 100%; height: 3em; background-color: white; border: 2px solid black; border-radius: 0.1em; padding: 0.2em 0.5em;}
         .input[type=range]{ border: none; height: 1em; -webkit-appearance: none;
         }
@@ -120,7 +121,11 @@ display: flex; align-items: end;
             .inputContainer.type2 .input[type=range]::-webkit-slider-thumb {width: 30px; border-radius: 15px;}
 
 
-    .inputContainer > span {position: absolute; top: 96%; margin-left: 0.75em; margin-top: -0.15em; font-size: 0.8em;}
+    .inputContainer > span {
+    /*position: absolute; top: 96%; */
+    margin-left: 0.75em; margin-top: -0.15em;
+    font-size: 0.8em;
+    }
 
 .tableDiv {overflow: auto; width: 100%; height: 100%; display: flex;}
 .table {display: flex; flex-direction: column; border: 2px solid black; width: 100%; height: 100%;}
@@ -153,6 +158,7 @@ display: flex; align-items: end;
 
 .opDiv {width: calc(100% - 0.4em); border: 1px solid black; display: flex; margin: 0.2em;}
     .opdOp {cursor: pointer; width: 100%; display: flex; align-items: center; justify-content: center; user-select: none;}
+        .opdOp:hover {box-shadow: inset 0px -100px rgba(0,0,0,0.1);}
         .opdOp.selected {background-color: rgba(var(--c1));}
 
 
@@ -213,6 +219,39 @@ display: flex; align-items: end;
 
 
 
+
+
+#storySheet {
+    width: 98%; height: 98%;
+    background-color: white;
+    display: flex;
+}
+
+#ssHierarchy {
+    width: 20%; height: 100%;
+    background-color: pink;
+    display: flex; flex-direction: column;
+    border: 2px solid black;
+}
+    #ssList {
+    width: 100%; height: 100%;
+    background-color: peachpuff;
+    overflow: auto;
+    display: flex; flex-direction: column;
+    align-items: center;
+    }
+    #sshMenu {width: 100%; height: 3rem; background-color: mediumpurple; }
+        #ssList .icon:hover {cursor: unset;}
+        #sshMenu:hover #sshPopup {max-height: 400px;}
+    #sshPopup {transition: 0.5s; position: absolute; width: 100%; max-height: 0; overflow: hidden; bottom: 100%;}
+
+
+
+
+
+
+
+
 #mStoryCreator {width: 70%; height: 55%; background-color: white; top: -100px; padding: 1em; padding-top: 0; display: flex; flex-direction: column;}
     #mStoryCreator .title {padding: 1em; text-align: center; font-size: 1.5em; font-weight: bold;}
     #mscBottom {display: flex; width: 100%; height: 100%;}
@@ -240,7 +279,8 @@ display: flex; align-items: end;
             #schMenu:hover #schmPopup {max-height: 400px;}
     #scPreview {width: 60%; height: 100%; background-color: white; border: 2px solid black; border-right: none; border-left: none;}
     #scStyleList {width: 20%; height: 100%; background-color: white; border: 2px solid black; overflow: auto;}
-        .slTitle {width: 100%; padding: 0.25em 0.5em; text-align: center; border-bottom: 2px solid black;}
+        .slTitle {width: 100%; padding: 0.25em 0.5em; text-align: center; border-bottom: 2px solid black; border-top: 2px solid black;}
+        .slTitle:first-child {margin-top: 0; border-top: none;}
 #scContextMenu {position: absolute; display: flex; flex-direction: row; width: 8rem;
     left: 0%;
 }
